--- a/mods/sp/sequences/seqdefaults.yaml
+++ b/mods/sp/sequences/seqdefaults.yaml
@@ -7,6 +7,7 @@
 		UseTilesetCode: false
 		ZOffset: 512
 		BlendMode: Additive
+		IgnoreWorldTint: True
 	veins: veinatac
 		Length: 12
 		UseTilesetExtension: true
