A bit more DepthBuffer work.

--- a/mods/sp/sequences/nodseq.yaml
+++ b/mods/sp/sequences/nodseq.yaml
@@ -355,7 +355,7 @@ chamspy:
 nodmcv:
 	Inherits: ^EmpOverlay
 	Defaults:
-		Offset: 0,0,0
+		Offset: 0, 0, 24
 	idle:
 		Facings: 32
 		UseTilesetCode: false
@@ -363,11 +363,11 @@ nodmcv:
 		Facings: 32
 	run:
 		Facings: 32
-	icon: nodmcvicon
-		Offset: 0, 0
 	shield: shieldlarge
 		Length: *
 		Offset: 0,-20
+	icon: nodmcvicon
+		Offset: 0, 0
 
 bike:
 	Inherits@1: ^SpriteVehicleWithShadow
