--- a/mods/sp/sequences/gdiseq.yaml
+++ b/mods/sp/sequences/gdiseq.yaml
@@ -1667,9 +1667,8 @@ ionbeammini:
 gdimcv:
 	Inherits: ^EmpOverlay
 	Defaults:
-		Offset: 0,-11,0
+		Offset: 0, -11, 18
 		UseTilesetCode: false
-		#Scale: 0.5
 	idle:
 		Facings: -32
 		ShadowStart: 32
@@ -1679,8 +1678,8 @@ gdimcv:
 	run:
 		Facings: -32
 		ShadowStart: 32
-	icon: sidebar-gdi|mcvicon
-		Offset: 0,0,0
 	shield: shieldlarge
 		Length: *
 		Offset: 0,-20
+	icon: sidebar-gdi|mcvicon
+		Offset: 0,0,0
