--- a/mods/sp/sequences/mutseq.yaml
+++ b/mods/sp/sequences/mutseq.yaml
@@ -872,7 +872,7 @@ mutheli:
 mutmcv:
 	Inherits: ^EmpOverlay
 	Defaults:
-		Offset: 0,-3,0
+		Offset: 0, -3, 24
 		UseTilesetCode: false
 	idle:
 		Facings: 32
@@ -1200,19 +1200,15 @@ muweap:
 		ZRamp: 1
 		-DepthSprite:
 	idle-roof: muweap_2
-		ZOffset: 512
 	damaged-idle-roof: muweap_2
 		Start: 1
-		ZOffset: 512
 	dead: muweap_2
 		Start: 2
 		Tick: 400
 	build-door: muweap_b
 		Length: 11
-		ZOffset: 512
 	damaged-build-door: muweap_b
 		Length: 11
-		ZOffset: 512
 	make: muweapmk
 		Length: 60
 		Tick: 40
@@ -1221,7 +1217,7 @@ muweap:
 		IgnoreWorldTint: True
 	emp-overlay: emp_fx01
 		Length: *
-		Offset: 0, 0
+		Offset: 0, 0, 26
 		UseTilesetCode: false
 		ZOffset: 512
 		BlendMode: Additive
@@ -1319,6 +1315,7 @@ muhall:
 	Defaults:
 		Offset: 12, -36, 36
 		UseTilesetCode: false
+		DepthSprite: isodepth.shp
 	idle:
 		Start: 26
 	damaged-idle:
@@ -1330,13 +1327,16 @@ muhall:
 		Length: 25
 	emp-overlay: emp_fx01
 		Length: *
-		Offset: 0, 0
+		Offset: 0, 0, 37
 		UseTilesetCode: false
 		ZOffset: 512
 		BlendMode: Additive
+		IgnoreWorldTint: True
+		-DepthSprite:
 	icon: muhallicon
 		Offset: 0, 0
 		UseTilesetCode: false
+		-DepthSprite:
 
 wall.mut:
 	Defaults: mutwall
@@ -1559,6 +1559,7 @@ muventi:
 	Defaults:
 		Offset: 0, -24, 24
 		UseTilesetCode: false
+		DepthSprite: isodepth.shp
 	idle: dot
 	damaged-idle: dot
 	dead: dot
@@ -1575,18 +1576,23 @@ muventi:
 		ShadowStart: 91
 	emp-overlay: emp_fx01
 		Length: *
-		Offset: 0, 0
+		Offset: 0, 0, 25
 		UseTilesetCode: false
 		ZOffset: 512
 		BlendMode: Additive
+		IgnoreWorldTint: True
+		-DepthSprite:
 	icon: mutventiicon
 		Offset: 0, 0
 		UseTilesetCode: false
+		-DepthSprite:
 
 mutsw1:
 	Defaults:
 		Offset: -6, -26, 30
 		UseTilesetCode: false
+		DepthSprite: isodepth.shp
+		DepthSpriteOffset: -12, 0
 	idle:
 		Start: 30
 	active:
@@ -1601,18 +1607,22 @@ mutsw1:
 		ShadowStart: 32
 	emp-overlay: emp_fx01
 		Length: *
-		Offset: 0, 0
+		Offset: 0, 0, 31
 		UseTilesetCode: false
 		ZOffset: 512
 		BlendMode: Additive
+		IgnoreWorldTint: True
+		-DepthSprite:
 	icon: mutsw1icon
 		Offset: 0, 0
 		UseTilesetCode: false
+		-DepthSprite:
 
 mutsw2:
 	Defaults:
 		Offset: 0, -36, 36
 		UseTilesetCode: false
+		DepthSprite: isodepth.shp
 	idle:
 		Start: 31
 		Length: 19
@@ -1627,13 +1637,16 @@ mutsw2:
 		Length: 29
 	emp-overlay: emp_fx01
 		Length: *
-		Offset: 0, 0
+		Offset: 0, 0, 37
 		UseTilesetCode: false
 		ZOffset: 512
 		BlendMode: Additive
+		IgnoreWorldTint: True
+		-DepthSprite:
 	icon: mutsw2icon
 		Offset: 0, 0
 		UseTilesetCode: false
+		-DepthSprite:
 
 minivein:
 	Inherits: ^InfantryDeathAnims
